--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ security.jwt.resource-ids=testjwtresourceid
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://node12153-env-3153518.jelastic.saveincloud.net:3306/ywp2_dev
+spring.datasource.url = jdbc:mysql://node15360-env-7208816.jelastic.saveincloud.net:3306/ywp2_dev
 spring.datasource.username =root
-spring.datasource.password =LRyRxz0Hu8
+spring.datasource.password =RAAavy58709
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
