--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ security.jwt.resource-ids=testjwtresourceid
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://node15360-env-7208816.jelastic.saveincloud.net:3306/ywp2_dev
+spring.datasource.url = jdbc:mysql://191.243.199.205:3306/ywp2_dev
 spring.datasource.username =root
 spring.datasource.password =RAAavy58709
 spring.datasource.testWhileIdle = true
