--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,11 @@ security.jwt.resource-ids=testjwtresourceid
 spring.datasource.url = jdbc:mysql://191.243.199.205:3306/ywp2_dev
 spring.datasource.username =root
 spring.datasource.password =RAAavy58709
+
+#spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
+#spring.datasource.username =root
+#spring.datasource.password =n6j7y7a5
+
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
