--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ security.jwt.resource-ids=testjwtresourceid
 #spring.datasource.username =root
 #spring.datasource.password =RAAavy58709
 
-spring.datasource.url = jdbc:mysql://localhost:3306/concretepage
+spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
 spring.datasource.username =root
 spring.datasource.password =n6j7y7a5
 
