--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,13 @@ security.jwt.resource-ids=testjwtresourceid
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://191.243.199.205:3306/ywp2_dev
-spring.datasource.username =root
-spring.datasource.password =RAAavy58709
-
-#spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
+#spring.datasource.url = jdbc:mysql://191.243.199.205:3306/ywp2_dev
 #spring.datasource.username =root
-#spring.datasource.password =n6j7y7a5
+#spring.datasource.password =RAAavy58709
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
+spring.datasource.username =root
+spring.datasource.password =n6j7y7a5
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -32,6 +32,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 
 #search multipart
 spring.http.multipart.max-file-size=1MB
