--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,4 +49,27 @@ spring.thymeleaf.cache=false
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
+#============================================================================
+# Configure Main Scheduler Properties
+#============================================================================
+org.quartz.scheduler.instanceName=spring-boot-quartz-cluster-example
+org.quartz.scheduler.instanceId=AUTO
 
+#============================================================================
+# Configure ThreadPool
+#============================================================================
+org.quartz.threadPool.threadCount=1
+
+#============================================================================
+# Configure JobStore
+#============================================================================
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=true
+org.quartz.jobStore.misfireThreshold=60000
+org.quartz.jobStore.tablePrefix=QRTZ_
+
+org.quartz.jobStore.isClustered=true
+org.quartz.jobStore.clusterCheckinInterval=20000
+
+liquibase.change-log=classpath*:db/changelog/changelog-master.xml
