--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<apacheCommonLang.version>2.6</apacheCommonLang.version>
 	</properties>
 
 	<dependencies>
@@ -88,7 +89,11 @@
 			<optional> true </optional> 
 			<scope>runtime</scope>
 		</dependency>
-
+ <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${apacheCommonLang.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
