--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ security.jwt.resource-ids=testjwtresourceid
 #spring.datasource.username =root
 #spring.datasource.password =RAAavy58709
 
-spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
-spring.datasource.username =root
-spring.datasource.password =n6j7y7a5
+spring.datasource.url = jdbc:mysql://c9cujduvu830eexs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pe143pji59pr5cb8
+spring.datasource.username =r4ie18dvpldw1f6b
+spring.datasource.password =divbovnkbhfup38t
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
