--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ security.jwt.resource-ids=testjwtresourceid
 #spring.datasource.username =root
 #spring.datasource.password =RAAavy58709
 
-spring.datasource.url = jdbc:mysql://c9cujduvu830eexs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pe143pji59pr5cb8
+spring.datasource.url = jdbc:mysql://c9cujduvu830eexs.cbetxkdyhwsb.us-east-1.rds.amazonaws.coms:3306/pe143pji59pr5cb8
 spring.datasource.username =r4ie18dvpldw1f6b
 spring.datasource.password =ue6a06ell9a3s5qo
 
