--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ security.jwt.resource-ids=testjwtresourceid
 #spring.datasource.username =root
 #spring.datasource.password =RAAavy58709
 
-spring.datasource.url = jdbc:mysql://c9cujduvu830eexs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pe143pji59pr5cb8s
-spring.datasource.username =r4ie18dvpldw1f6b
-spring.datasource.password =ue6a06ell9a3s5qo
+spring.datasource.url = jdbc:mysql://g9fej9rujq0yt0cd.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/yymta65d9tg092hn
+spring.datasource.username =waqdwzbjih7dgtub
+spring.datasource.password =m13l0ym0xwwzj1rx
 
 #spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
 #spring.datasource.username =root
