--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,13 @@ security.jwt.resource-ids=testjwtresourceid
 #spring.datasource.username =root
 #spring.datasource.password =RAAavy58709
 
-spring.datasource.url = jdbc:mysql://g9fej9rujq0yt0cd.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/yymta65d9tg092hn
-spring.datasource.username =waqdwzbjih7dgtub
-spring.datasource.password =m13l0ym0xwwzj1rx
+#spring.datasource.url = jdbc:mysql://g9fej9rujq0yt0cd.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/yymta65d9tg092hn
+#spring.datasource.username =waqdwzbjih7dgtub
+#spring.datasource.password =m13l0ym0xwwzj1rx
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
-#spring.datasource.username =root
-#spring.datasource.password =n6j7y7a5
+spring.datasource.url = jdbc:mysql://localhost:3306/ywp2_dev
+spring.datasource.username =root
+spring.datasource.password =n6j7y7a5
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -75,4 +75,8 @@ org.quartz.jobStore.tablePrefix=QRTZ_
 org.quartz.jobStore.isClustered=true
 org.quartz.jobStore.clusterCheckinInterval=20000
 
-liquibase.change-log=classpath*:db/changelog/changelog-master.xml
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
