--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-security.oauth2.resource.filter-order=3
-
-security.signing-key=MaYzkSjmkzPC57L
-security.encoding-strength=256
-security.security-realm=Spring Boot JWT Example Realm
-
-security.jwt.client-id=testjwtclientid
-security.jwt.client-secret=XY7kmzoNzl100
-security.jwt.grant-type=password
-security.jwt.scope-read=read
-security.jwt.scope-write=write
-security.jwt.resource-ids=testjwtresourceid
+#security.oauth2.resource.filter-order=3
+#
+#security.signing-key=MaYzkSjmkzPC57L
+#security.encoding-strength=256
+#security.security-realm=Spring Boot JWT Example Realm
+#
+#security.jwt.client-id=testjwtclientid
+#security.jwt.client-secret=XY7kmzoNzl100
+#security.jwt.grant-type=password
+#security.jwt.scope-read=read
+#security.jwt.scope-write=write
+#security.jwt.resource-ids=testjwtresourceid
 
 # ===============================
 # = DATA SOURCE
@@ -38,9 +38,15 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
+
 #search multipart
-spring.http.multipart.max-file-size=1MB
-spring.http.multipart.max-request-size=1MB
+#spring.http.multipart.max-file-size=1MB
+#spring.http.multipart.max-request-size=1MB
 # ===============================
 # = Thymeleaf configurations
 # ===============================
@@ -49,8 +55,8 @@ spring.thymeleaf.cache=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
-spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+#spring.queries.users-query=select email, password, active from user where email=?
+#spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
 #============================================================================
 # Configure Main Scheduler Properties
@@ -75,8 +81,8 @@ org.quartz.jobStore.tablePrefix=QRTZ_
 org.quartz.jobStore.isClustered=true
 org.quartz.jobStore.clusterCheckinInterval=20000
 
-jwt.header=Authorization
-jwt.secret=mySecret
-jwt.expiration=604800
-jwt.route.authentication.path=/auth
-jwt.route.authentication.refresh=/refresh
+#jwt.header=Authorization
+#jwt.secret=mySecret
+#jwt.expiration=604800
+#jwt.route.authentication.path=/auth
+#jwt.route.authentication.refresh=/refresh
