--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
         <jjwt.version>0.9.1</jjwt.version>
 
 		<jacoco.version>0.8.1</jacoco.version>
-
+ 		<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 		<findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
 		<findbugs.version>3.0.1</findbugs.version>
@@ -299,6 +300,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
 
 
 		</plugins>
