--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,16 @@
 		<java.version>1.8</java.version>
 		<apacheCommonLang.version>2.6</apacheCommonLang.version>
         <jjwt.version>0.9.1</jjwt.version>
+
 		<jacoco.version>0.8.1</jacoco.version>
+
+		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+		<findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
+		<findbugs.version>3.0.1</findbugs.version>
+		<docker-maven-plugin.version>1.1.1</docker-maven-plugin.version>
 	</properties>
 
 	<dependencies>
-	
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -262,6 +267,13 @@
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 		</dependency>
+
+     <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>findbugs</artifactId>
+            <version>${findbugs.version}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -275,6 +287,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<executable>true</executable>
 					<addResources>true</addResources>
